# trader

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/rules/: general-coding-guidelines.md  project-specific-ml-trader.md  python-ml-best-practices.md
config/: data_processing_config.yaml  extract_config.yaml  extract_raw_config.yaml  split_config.yaml  training_config.yaml
scripts/: collect_raw_data.sh  data_processing.py  inspect_processed_data.py  plot_csv.py  requirements.txt  run_training.py
scripts/data_processing/: data_utils.py  extract_raw.py  extract_raw_data.py  process_extracted_data.py  split_data.py
src/: agent.py  buffer.py  constants.py  data.py  evaluation.py  metrics.py  model.py  trainer.py
src/env/: __init__.py  trading_env.py
src/trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: checkpoint_utils.py  logging_config.py  utils.py
tests/: conftest.py  test_agent.py  test_buffer.py  test_data.py  test_metrics.py  test_model.py  test_trainer.py  test_trainer_checkpoint.py  test_trainer_train_loop.py  test_trainer_validate.py
tests/env/: test_core_functionality.py  test_edge_cases.py  test_initialization.py  test_small_values.py
tests/fixtures/config/: test_training_config.yaml
tests/integration/: test_training_run.py
tests/scripts/: test_data_processing.py  test_inspect_processed_data.py  test_run_training.py
tests/utils/: test_checkpoint_utils.py  test_utils.py
