[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trader"
version = "0.1.0"
dependencies = [
    "cloudpickle==3.1.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "Farama-Notifications==0.0.4",
    "filelock==3.18.0",
    "fonttools==4.57.0",
    "fsspec==2025.3.2",
    "gymnasium==1.1.1",
    "iniconfig==2.1.0",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.1",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "setuptools==78.1.0",
    "six==1.17.0",
    "sympy==1.13.1",
    "ta==0.11.0",
    "tomli==2.2.1",
    "torch==2.6.0",
    "typing_extensions==4.13.1",
    "tzdata==2025.2",
    "scikit-learn",
    "trading_env==0.1.2"
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=5.0.0"
]

[tool.pylance]
extraPaths = ["./src"]

# Or using the general python analysis setting:
[tool.pyright] # Pylance uses Pyright engine
extraPaths = ["./src"]

# --- Ruff Linter/Formatter Configuration --- #
[tool.ruff]
line-length = 128 # Match black's default

[tool.ruff.lint]
# Select a base set of rules (e.g., pyflakes, pycodestyle errors/warnings)
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes errors (undefined names, unused imports/variables, etc.)
    "W",  # pycodestyle warnings (indentation, whitespace - optional)
    # Add other rule sets you find useful (e.g., "I" for isort, "B" for flake8-bugbear)
]

# Ignore specific rules globally if desired
ignore = ["E501"] # Ignore line length errors globally

# Define per-file ignores (often useful for tests)
[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "F841", # Ignore unused local variables in test files
    "E501", # Optionally ignore line length in tests if necessary
]
"src/agent.py" = ["F841"] # Ignore unused grad check vars in agent

# You can also configure other tools like black here if desired
[tool.black]
line-length = 128
